compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__ok_2_args.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let Ok(1, x) = 1"
---
----- SOURCE CODE
let Ok(1, x) = 1

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let Ok(1, x) = 1
  │     ^^^^^^^^

Expected type:

    Int

Found type:

    Result(Int, a)

error: Incorrect arity
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let Ok(1, x) = 1
  │     ^^^^^^^^ Expected 1 argument, got 2
